--- a/Talk-with-PDF-main/requirements.txt
+++ b/Talk-with-PDF-main/requirements.txt
@@ -1,21 +1,12 @@
-langchain
-PyPDF2
-python-dotenv
-streamlit
-openai
-faiss-cpu
-altair
-tiktoken
-matplotlib
-pycryptodome==3.15.0
-langchain.text_splitter
-langchain.embeddings
-langchain.vectorstores
-langchain.chat_models
-langchain.memory
-langchain.chains
-htmlTemplates 
-langchain.llms
+langchain==0.0.184
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+streamlit==1.18.1
+openai==1.24.0
+faiss-cpu==1.7.4
+altair==4
+tiktoken==0.5.2
+langchain-community==0.0.37
 # uncomment to use huggingface llms
 # huggingface-hub==0.14.1
 
