--- a/Talk-with-PDF-main/requirements.txt
+++ b/Talk-with-PDF-main/requirements.txt
@@ -2,11 +2,13 @@ langchain==0.0.184
 PyPDF2==3.0.1
 python-dotenv==1.0.0
 streamlit==1.18.1
+langchain_openai==0.0.6
 openai==1.24.0
 faiss-cpu==1.7.4
 altair==4
 tiktoken==0.5.2
 langchain-community==0.0.37
+langchain_community==0.0.37
 # uncomment to use huggingface llms
 # huggingface-hub==0.14.1
 
