--- a/Talk-with-PDF-main/requirements.txt
+++ b/Talk-with-PDF-main/requirements.txt
@@ -9,6 +9,7 @@ altair==4.0.0
 tiktoken==0.5.2
 langchain-community==0.0.37
 langchain_community==0.0.37
+chromadb==0.5.0
 # uncomment to use huggingface llms
 # huggingface-hub==0.14.1
 
