--- a/Talk-with-PDF-main/requirements.txt
+++ b/Talk-with-PDF-main/requirements.txt
@@ -1,17 +1,10 @@
-langchain==0.0.184
-PyPDF2==3.0.1
+langchain==0.1.16
 python-dotenv==1.0.0
 streamlit==1.18.1
-langchain_openai==0.0.6
-openai==1.24.0
 faiss-cpu==1.7.4
 altair==4.0.0
 tiktoken==0.5.2
 langchain-community==0.0.37
 langchain_community==0.0.37
-# uncomment to use huggingface llms
-# huggingface-hub==0.14.1
-
-# uncomment to use instructor embeddings
-# InstructorEmbedding==1.0.1
-# sentence-transformers==2.2.2
+langchain_google_genai==1.0.3
+langchain_core==0.1.51
