--- a/Talk-with-PDF-main/requirements.txt
+++ b/Talk-with-PDF-main/requirements.txt
@@ -9,3 +9,6 @@ langchain_community==0.0.37
 langchain_google_genai==1.0.3
 langchain_core==0.1.51
 pypdf==4.2.0
+rdflib==7.0.0 
+traits==6.3.2
+PyMuPDFb==1.24.3
